--- a/start.html
+++ b/start.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>混雑可視化システム - トップページ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>混雑可視化システム - トップページ</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <style>
     body {
       margin: 0;
@@ -11,75 +12,86 @@
       background: #f4f9ff;
       color: #2c3e50;
       line-height: 1.6;
+      overflow-x: hidden;
     }
 
     header {
       background-color: #2c3e50;
       color: white;
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
     }
 
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 60px 20px 40px;
-    }
-
-    .hero img {
-      width: 60%;
-      max-width: 600px;
-      margin-bottom: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    .description {
-      max-width: 800px;
+    .container {
+      max-width: 960px;
       margin: 0 auto;
-      padding: 0 20px 40px;
+      padding: 60px 20px;
+    }
+
+    .section {
+      margin-bottom: 80px;
+    }
+
+    .section img {
+      width: 100%;
+      max-width: 640px;
+      display: block;
+      margin: 0 auto 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+    }
+
+    h1, h2 {
       text-align: center;
     }
 
-    .description h2 {
-      font-size: 28px;
+    h1 {
+      font-size: 2.2rem;
+    }
+
+    h2 {
+      font-size: 1.6rem;
       margin-bottom: 20px;
     }
 
-    .description p {
-      font-size: 18px;
-      color: #444;
+    p {
+      font-size: 1rem;
+      padding: 0 10px;
+      text-align: center;
+    }
+
+    .button-wrapper {
+      text-align: center;
+      margin-top: 40px;
     }
 
     .btn-start {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 12px 28px;
-      background-color: #3498db;
+      padding: 14px 32px;
+      background: #3498db;
       color: white;
-      text-decoration: none;
-      font-size: 18px;
+      border: none;
+      font-size: 1.1rem;
       border-radius: 8px;
-      transition: background-color 0.3s;
+      text-decoration: none;
+      transition: background 0.3s;
     }
 
     .btn-start:hover {
-      background-color: #2980b9;
+      background: #2980b9;
     }
 
     footer {
-      background-color: #eee;
+      background: #eee;
       padding: 30px 20px;
       text-align: center;
-      font-size: 14px;
+      font-size: 0.9rem;
       color: #555;
     }
 
     footer a {
+      margin: 0 10px;
       color: #2c3e50;
       text-decoration: none;
-      margin: 0 10px;
     }
 
     footer a:hover {
@@ -90,29 +102,71 @@
 
 <body>
   <header>
-    <h1>混雑可視化システム</h1>
-    <p>A Smart Visitor Tracking System with QR Codes</p>
+    <h1 class="fade-in">混雑可視化システム</h1>
+    <p class="fade-in">A Smart QR-Based Visitor Tracking Tool</p>
   </header>
 
-  <section class="hero">
-    <img src="map.png" alt="店内マップ">
-    <a href="index.html" class="btn-start">▶︎ 使ってみる</a>
-  </section>
+  <div class="container">
+    <section class="section">
+      <img src="map.png" alt="店内マップ" class="fade-up" />
+      <div class="button-wrapper fade-up">
+        <a href="index.html" class="btn-start">▶ 使ってみる</a>
+      </div>
+    </section>
 
-  <section class="description">
-    <h2>このプロジェクトについて</h2>
-    <p>
-      このシステムは、QRコードを活用してお客様の入退店状況を記録し、
-      店舗の混雑具合や待機状況を可視化します。<br />
-      店内のテーブル利用状況や、店外での待ち人数・予想待機時間をリアルタイムで把握可能です。
-    </p>
-  </section>
+    <section class="section fade-up">
+      <h2>このプロジェクトについて</h2>
+      <p>QRコードを使ってお客様の入退店を記録し、店舗の混雑状況やテーブル利用状況、外の待ち状況などをリアルタイムで可視化するシステムです。</p>
+    </section>
+
+    <section class="section fade-up">
+      <h2>特徴</h2>
+      <p>
+        ✅ 入退店ログの記録と可視化<br>
+        ✅ 外での待機状況表示と管理<br>
+        ✅ テーブルごとの利用時間や滞在時間表示<br>
+        ✅ 店舗向けにヒストグラムで混雑時間帯分析
+      </p>
+    </section>
+
+    <section class="section fade-up">
+      <h2>技術スタック</h2>
+      <p>Firebase / HTML5 / JavaScript / GSAP / Chart.js など</p>
+    </section>
+  </div>
 
   <footer>
     <p>© 2025 QR Visitor Log Project</p>
     <a href="https://github.com/Mimichan33/QR-webpage" target="_blank">GitHub</a>
     <a href="#">マニュアル（準備中）</a>
   </footer>
+
+  <script>
+    // GSAP アニメーション
+    window.addEventListener("load", () => {
+      gsap.from(".fade-in", {
+        opacity: 0,
+        y: 30,
+        duration: 1,
+        stagger: 0.2,
+        ease: "power2.out"
+      });
+
+      gsap.from(".fade-up", {
+        scrollTrigger: {
+          trigger: ".fade-up",
+          start: "top 80%",
+          toggleActions: "play none none none"
+        },
+        opacity: 0,
+        y: 40,
+        duration: 1,
+        stagger: 0.3,
+        ease: "power2.out"
+      });
+    });
+  </script>
 </body>
 </html>
+
 
