--- a/start.html
+++ b/start.html
@@ -116,7 +116,17 @@
 
     <section class="section fade-up">
       <h2>このプロジェクトについて</h2>
-      <p>QRコードを使ってお客様の入退店を記録し、店舗の混雑状況やテーブル利用状況、外の待ち状況などをリアルタイムで可視化するシステムです。</p>
+      <p>QRコードを使ってお客様の入退店を記録し、店舗の混雑状況やテーブル利用状況、外の待ち状況などをリアルタイムで可視化するシステムです。<br>
+      お客様は入店と退店のそれぞれ際に各テーブルにあるQRコードを読み込んでもらいます。この情報は現在の混雑度や混雑時間の把握に利用されます<br>
+      この方法によってお客様は実際に店に向かわなくても混雑度を知ることができ、行動の最適化を図ることができるようになります。</p>
+    </section>
+
+
+    <section class="section fade-up">
+      <h2>研究背景</h2>
+      <p>
+        このプロジェクトは、<br>
+      </p>
     </section>
 
     <section class="section fade-up">
@@ -133,6 +143,10 @@
       <h2>技術スタック</h2>
       <p>Firebase / HTML5 / JavaScript / GSAP / Chart.js など</p>
     </section>
+
+     <div class="button-wrapper fade-up">
+        <a href="index.html" class="btn-start">▶ 使ってみる</a>
+      </div>
   </div>
 
   <footer>
