--- a/index.html
+++ b/index.html
@@ -297,42 +297,11 @@ window.addEventListener("DOMContentLoaded", () => {
     </section>
 
     <section>
-    <h2>全体状況</h2>
-
-    <!-- 🔵 進捗バー -->
-    <p>店内利用率：</p>
-    <div style="width: 100%; background-color: #ddd; border-radius: 10px; overflow: hidden; height: 25px; margin-bottom: 10px;">
-      <div id="usageProgress" style="
-        width: 0%;
-        background-color: #4caf50;
-        height: 100%;
-        text-align: center;
-        color: white;
-        line-height: 25px;
-        transition: width 0.3s;
-      ">0%</div>
-    </div>
-
-    <!-- ✅ 待機人数 -->
+    <h2>待機人数</h2>
     <p>現在の待機人数: <span id="waitingCount">読み込み中...</span></p>
-
-    <p>現在の入店者数: <span id="count">読み込み中...</span></p>
-    <p>累計入店数: <span id="entries">-</span></p>
-    <p>累計退店数: <span id="exits">-</span></p>
   </section>
 
-  <section id="tables">
-    <h2>テーブル別 使用状況（時刻）</h2>
-    <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
-    <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
-    <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
-    <p>テーブル4：<span id="table4-status">読み込み中...</span></p>
-    <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
-    <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
-    <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
-    <p>テーブル8：<span id="table8-status">読み込み中...</span></p>
-    <p>テーブル9：<span id="table9-status">読み込み中...</span></p>
-  </section>
+  
   </main>
 
 </body>
