--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
       document.getElementById("count").textContent = entries - exits;
       document.getElementById("entries").textContent = entries;
       document.getElementById("exits").textContent = exits;
+      document.getElementById("waitingCount").textContent = waiting;
+
 
       updateTableDisplays();
     }
