--- a/practice.html
+++ b/practice.html
@@ -1,38 +1,85 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ハンバーガーメニュー</title>
+  <meta charset="UTF-8" />
+  <title>混雑状況</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
+      font-family: 'Helvetica Neue', sans-serif;
       margin: 0;
-      font-family: sans-serif;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+      overflow-x: hidden;
     }
 
-    /* ハンバーガーアイコン */
-    .hamburger {
-      font-size: 30px;
-      cursor: pointer;
-      padding: 16px;
-      background-color: #333;
+    header {
+      background-color: #2c3e50;
       color: white;
-      border: none;
+      position: relative;
     }
 
-    /* ドロワーメニュー */
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
+
+    .header-title {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+
+    .header-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    /* ハンバーガーメニュー */
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+
     .drawer {
       position: fixed;
       top: 0;
       left: -250px;
       width: 250px;
       height: 100%;
-      background-color: #444;
+      background-color: #34495e;
       color: white;
-      transition: left 0.3s ease;
-      padding-top: 60px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.3);
+      transition: 0.3s;
       z-index: 1000;
+      padding-top: 60px;
     }
 
     .drawer.open {
@@ -41,69 +88,201 @@
 
     .drawer a {
       display: block;
-      padding: 12px 24px;
-      color: white;
+      padding: 15px 20px;
       text-decoration: none;
-      border-bottom: 1px solid #666;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
     }
 
     .drawer a:hover {
-      background-color: #555;
+      background-color: #2c3e50;
     }
 
-    /* オーバーレイ */
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background-color: rgba(0,0,0,0.4);
-      z-index: 999;
-      display: none;
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
     }
 
-    .overlay.show {
-      display: block;
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
     }
 
-    /* メインコンテンツ（見やすく） */
-    .content {
-      padding: 16px;
+    p {
+      font-size: 16px;
+      margin: 8px 0;
+    }
+
+    #tables p {
+      font-size: 17px;
     }
   </style>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    const tableCounts = {};
+
+    function formatTimestamp(isoString) {
+      if (!isoString || typeof isoString !== "string") return "ー";
+      const date = new Date(isoString);
+      const options = {
+        timeZone: "Asia/Tokyo",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit",
+        hour: "2-digit",
+        minute: "2-digit"
+      };
+      return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g, "-").replace(",", "");
+    }
+
+    function calculateElapsedTime(isoString) {
+      if (!isoString) return "";
+      const start = new Date(isoString);
+      const now = new Date();
+      const diffMs = now - start;
+      if (diffMs < 0) return "";
+      const minutes = Math.floor(diffMs / 60000);
+      const hours = Math.floor(minutes / 60);
+      const remainingMinutes = minutes % 60;
+      return hours > 0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
+    }
+
+    function updateTableDisplays() {
+      Object.keys(tableCounts).forEach(tableNum => {
+        const t = tableCounts[tableNum];
+        const currentCount = t.enter - t.exit;
+        const timeToShow = currentCount > 0 ? t.lastEnterTime : null;
+        const status = currentCount > 0 ? "利用中" : "空席";
+        const timeText = formatTimestamp(timeToShow);
+        const elapsed = currentCount > 0 ? `｜${calculateElapsedTime(timeToShow)}` : "";
+        const element = document.getElementById(`table${tableNum}-status`);
+        if (element) {
+          element.textContent = `${status}（${timeText}${elapsed}）`;
+        }
+      });
+    }
+
+    function countVisitors(snapshot) {
+      let entries = 0;
+      let exits = 0;
+      let waiting = 0;
+
+      for (let i = 1; i <= 9; i++) {
+        tableCounts[i.toString()] = {
+          enter: 0,
+          exit: 0,
+          lastEnterTime: null
+        };
+      }
+
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const table = data.table;
+        const timestamp = data.timestamp;
+        if (!table || !timestamp) return;
+
+        if (data.type === "enter") entries++;
+        if (data.type === "exit") exits++;
+        if (data.type === "wait") waiting++;
+
+        if (tableCounts[table]) {
+          if (data.type === "enter") {
+            tableCounts[table].enter++;
+            if (!tableCounts[table].lastEnterTime || new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)) {
+              tableCounts[table].lastEnterTime = timestamp;
+            }
+          }
+          if (data.type === "exit") {
+            tableCounts[table].exit++;
+          }
+        }
+      });
+
+      document.getElementById("count").textContent = entries - exits;
+      document.getElementById("entries").textContent = entries;
+      document.getElementById("exits").textContent = exits;
+      document.getElementById("waitingCount").textContent = waiting;
+
+      updateTableDisplays();
+    }
+
+    window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
+  </script>
 </head>
 <body>
 
-  <!-- ハンバーガーアイコン -->
-  <button class="hamburger" onclick="toggleDrawer()">☰</button>
+  <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div class="header-bar">
+      <div class="header-title">店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="#">ログアウト</a>
+      </div>
+    </div>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </div>
+  </header>
 
-  <!-- オーバーレイ -->
-  <div class="overlay" id="overlay" onclick="toggleDrawer()"></div>
+  <main>    
+    <section>
+      <h2>全体状況</h2>
+      <p>現在の入店者数: <span id="count">読み込み中...</span></p>
+      <p>累計入店数: <span id="entries">-</span></p>
+      <p>累計退店数: <span id="exits">-</span></p>
+    </section>
 
-  <!-- ドロワーメニュー -->
-  <div class="drawer" id="drawer">
-    <a href="index.html">🏠 ホーム</a>
-    <a href="map.html">🗺 店内マップ</a>
-    <a href="status.html">📊 混雑状況可視化</a>
-    <a href="wait.html">⏳ 待ち管理</a>
-  </div>
+    <section id="tables">
+      <h2>テーブル別 使用状況（時刻）</h2>
+      <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
+      <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
+      <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
+      <p>テーブル4：<span id="table4-status">読み込み中...</span></p>
+      <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
+      <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
+      <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
+      <p>テーブル8：<span id="table8-status">読み込み中...</span></p>
+      <p>テーブル9：<span id="table9-status">読み込み中...</span></p>
+    </section>
 
-  <!-- メインコンテンツ -->
-  <div class="content">
-    <h1>ようこそ！</h1>
-    <p>ここにメインコンテンツが表示されます。</p>
-  </div>
-
-  <!-- スクリプト -->
-  <script>
-    function toggleDrawer() {
-      const drawer = document.getElementById('drawer');
-      const overlay = document.getElementById('overlay');
-      drawer.classList.toggle('open');
-      overlay.classList.toggle('show');
-    }
-  </script>
+    <section>
+      <h2>待機人数</h2>
+      <p>現在の待機人数: <span id="waitingCount">読み込み中...</span></p>
+    </section>
+  </main>
 
 </body>
 </html>
+
