--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       color: #2c3e50;
       overflow-x: hidden;
     }
-     
+
     header {
       background-color: #2c3e50;
       color: white;
+      position: relative;
     }
 
     .header-bar {
@@ -49,34 +50,53 @@
       text-decoration: underline;
     }
 
-    nav {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      background-color: #3498db;
-      text-align: center;
-      border-top: 1px solid #fff;
-      border-bottom: 1px solid #fff;
+    /* ハンバーガーメニュー */
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
     }
 
-    nav a {
-      padding: 12px 0;
+    .menu-button span {
       display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
       color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+
+    .drawer.open {
+      left: 0;
+    }
+
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
       text-decoration: none;
+      color: white;
       font-weight: bold;
-      border-right: 1px solid #fff;
+      border-bottom: 1px solid #2c3e50;
     }
 
-    nav a:last-child {
-      border-right: none;
-    }
-
-    nav a.active {
-      background-color: #1f618d;
-    }
-
-    nav a:hover {
-      background-color: #2980b9;
+    .drawer a:hover {
+      background-color: #2c3e50;
     }
 
     main {
@@ -100,7 +120,6 @@
     #tables p {
       font-size: 17px;
     }
-
   </style>
 
   <script>
@@ -158,74 +177,83 @@
       });
     }
 
-   function countVisitors(snapshot) {
-  let entries = 0;
-  let exits = 0;
-  let waiting = 0;
+    function countVisitors(snapshot) {
+      let entries = 0;
+      let exits = 0;
+      let waiting = 0;
 
-  for (let i = 1; i <= 9; i++) {
-    tableCounts[i.toString()] = {
-      enter: 0,
-      exit: 0,
-      lastEnterTime: null
-    };
-  }
+      for (let i = 1; i <= 9; i++) {
+        tableCounts[i.toString()] = {
+          enter: 0,
+          exit: 0,
+          lastEnterTime: null
+        };
+      }
 
-  snapshot.forEach(doc => {
-    const data = doc.data();
-    const table = data.table;
-    const timestamp = data.timestamp;
-    if (!table || !timestamp) return;
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const table = data.table;
+        const timestamp = data.timestamp;
+        if (!table || !timestamp) return;
 
-    if (data.type === "enter") entries++;
-    if (data.type === "exit") exits++;
-    if (data.type === "wait") waiting++;
+        if (data.type === "enter") entries++;
+        if (data.type === "exit") exits++;
+        if (data.type === "wait") waiting++;
 
-    if (tableCounts[table]) {
-      if (data.type === "enter") {
-        tableCounts[table].enter++;
-        if (!tableCounts[table].lastEnterTime || new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)) {
-          tableCounts[table].lastEnterTime = timestamp;
+        if (tableCounts[table]) {
+          if (data.type === "enter") {
+            tableCounts[table].enter++;
+            if (!tableCounts[table].lastEnterTime || new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)) {
+              tableCounts[table].lastEnterTime = timestamp;
+            }
+          }
+          if (data.type === "exit") {
+            tableCounts[table].exit++;
+          }
         }
-      }
-      if (data.type === "exit") {
-        tableCounts[table].exit++;
-      }
+      });
+
+      document.getElementById("count").textContent = entries - exits;
+      document.getElementById("entries").textContent = entries;
+      document.getElementById("exits").textContent = exits;
+      document.getElementById("waitingCount").textContent = waiting;
+
+      updateTableDisplays();
     }
-  });
-
-  document.getElementById("count").textContent = entries - exits;
-  document.getElementById("entries").textContent = entries;
-  document.getElementById("exits").textContent = exits;
-  document.getElementById("waitingCount").textContent = waiting;
-
-  updateTableDisplays();
-}
-
 
     window.onload = () => {
       db.collection("logs").onSnapshot(countVisitors);
       setInterval(updateTableDisplays, 60000);
-    };    
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
   </script>
 </head>
 <body>
 
-  <!-- ✅ 本体 -->
   <header>
+    <div class="menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <div class="header-bar">
-      <div class="header-title">店内管理システム</div>
+      <div class="header-title">　　　　　店内管理システム</div>
       <div class="header-links">
         <a href="#">マニュアル</a>
         <a href="#">ログアウト</a>
       </div>
     </div>
-    <nav>
-      <a href="index.html" class="active">ホーム</a>
+    <div class="drawer">
+      <a href="index.html">ホーム</a>
       <a href="map.html">店内マップ</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">待ち管理</a>
-    </nav>
+    </div>
   </header>
 
   <main>    
@@ -250,11 +278,9 @@
     </section>
 
     <section>
-    <h2>待機人数</h2>
-    <p>現在の待機人数: <span id="waitingCount">読み込み中...</span></p>
-  </section>
-
-  
+      <h2>待機人数</h2>
+      <p>現在の待機人数: <span id="waitingCount">読み込み中...</span></p>
+    </section>
   </main>
 
 </body>
