--- a/practice.html
+++ b/practice.html
@@ -89,71 +89,17 @@
       padding: 20px;
       border-radius: 10px;
     }
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-      width: 30px;
-      gap: 5px;
-    }
-
-    .hamburger div {
-      height: 4px;
-      background-color: white;
-      border-radius: 2px;
-    }
-
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 220px;
-      height: 100%;
-      background-color: #2c3e50;
-      color: white;
-      padding-top: 60px;
-      transition: left 0.3s;
-      z-index: 1000;
-    }
-
-    .drawer.open {
-      left: 0;
-    }
-
-    .drawer a {
-      display: block;
-      padding: 12px 20px;
-      color: white;
-      text-decoration: none;
-    }
-
-    .drawer a:hover {
-      background-color: #34495e;
-    }
-
-    .drawer-backdrop {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
+    table {
       width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 999;
+      border-collapse: collapse;
     }
-
-    .drawer-backdrop.show {
-      display: block;
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: center;
     }
-
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-      }
-
-      .hamburger {
-        display: flex;
-      }
+    th {
+      background-color: #e0e0e0;
     }
   </style>
 </head>
@@ -166,26 +112,13 @@
         <a href="#">ログアウト</a>
       </div>
     </div>
-    <div class="hamburger" id="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+    <nav>
+      <a href="index.html">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html" class="active">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </nav>
   </header>
-
-  <div class="drawer" id="drawerMenu">
-    <a href="index.html">ホーム</a>
-    <a href="map.html">店内マップ</a>
-    <a href="histogram.html" class="active">混雑状況可視化</a>
-    <a href="admin.html">待ち管理</a>
-    <a href="#">マニュアル</a>
-    <a href="#">ログアウト</a>
-  </div>
-  <div class="drawer-backdrop" id="drawerBackdrop"></div>
-
-  <div class="container">
-    <canvas id="histogram" width="400" height="200"></canvas>
-  </div>
 
   <main>
     <h2>混雑傾向分析</h2>
@@ -238,21 +171,6 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
     let chart;
-
-     // ハンバーガーメニュー制御
-    const hamburger = document.getElementById("hamburger");
-    const drawerMenu = document.getElementById("drawerMenu");
-    const drawerBackdrop = document.getElementById("drawerBackdrop");
-
-    hamburger.addEventListener("click", () => {
-      drawerMenu.classList.toggle("open");
-      drawerBackdrop.classList.toggle("show");
-    });
-
-    drawerBackdrop.addEventListener("click", () => {
-      drawerMenu.classList.remove("open");
-      drawerBackdrop.classList.remove("show");
-    });
 
     function getDateRange(rangeType, baseDateStr) {
       const baseDate = new Date(baseDateStr + "T00:00:00+09:00");
@@ -428,7 +346,7 @@ async function updateChartAndTable() {
         const cols = [...tr.children].map(td => td.textContent);
         rows.push(cols);
       });
-      
+
       const csv = rows.map(row => row.join(",")).join("\n");
       const blob = new Blob([csv], { type: "text/csv" });
       const url = URL.createObjectURL(blob);
