--- a/practice.html
+++ b/practice.html
@@ -388,6 +388,17 @@ async function updateChartAndTable() {
     });
 
     window.addEventListener("DOMContentLoaded", updateChartAndTable);
+
+    window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+
+      const menuButton = document.querySelector(".menu-button");
+      const drawer = document.querySelector(".drawer");
+      menuButton.addEventListener("click", () => {
+        drawer.classList.toggle("open");
+      });
+    };
   </script>
 </body>
 </html>
