--- a/practice.html
+++ b/practice.html
@@ -25,6 +25,15 @@
       justify-content: space-between;
       align-items: center;
       padding: 12px 20px;
+      position: relative;
+    }
+
+    .hamburger {
+      font-size: 1.8em;
+      cursor: pointer;
+      background: none;
+      border: none;
+      color: white;
     }
 
     .header-title {
@@ -32,14 +41,22 @@
       font-weight: bold;
     }
 
-    .menu-button {
-      font-size: 24px;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: white;
+    .header-links {
+      display: flex;
+      gap: 20px;
     }
 
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    /* ドロワーメニュー */
     .drawer {
       position: fixed;
       top: 0;
@@ -47,26 +64,26 @@
       width: 250px;
       height: 100%;
       background-color: #34495e;
-      padding: 20px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.3);
-      transition: left 0.3s ease;
+      overflow-x: hidden;
+      transition: 0.3s;
+      padding-top: 60px;
       z-index: 1000;
+    }
+
+    .drawer a {
+      padding: 10px 20px;
+      text-decoration: none;
+      font-size: 1.2em;
+      color: white;
+      display: block;
+    }
+
+    .drawer a:hover {
+      background-color: #2c3e50;
     }
 
     .drawer.open {
       left: 0;
-    }
-
-    .drawer a {
-      display: block;
-      margin: 10px 0;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .drawer a:hover {
-      text-decoration: underline;
     }
 
     main {
@@ -107,32 +124,36 @@
 
     .btn-enter { background: #2ecc71; color: white; }
     .btn-exit { background: #e74c3c; color: white; }
-
   </style>
 </head>
 <body>
   <header>
     <div class="header-bar">
+      <button class="hamburger" onclick="toggleDrawer()">☰</button>
       <div class="header-title">店内管理システム</div>
-      <button class="menu-button" onclick="toggleDrawer()">☰</button>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="#">ログアウト</a>
+      </div>
     </div>
   </header>
 
-  <!-- ドロワーメニュー -->
-  <div class="drawer" id="drawer">
+  <div id="drawer" class="drawer">
     <a href="index.html">ホーム</a>
     <a href="map.html">店内マップ</a>
     <a href="histogram.html">混雑状況可視化</a>
     <a href="histogram.html">待ち管理</a>
-    <a href="#">マニュアル</a>
-    <a href="#">ログアウト</a>
   </div>
 
   <h1 style="display:none;" id="mainTitle">順番待ち管理（店員用）</h1>
   <div id="queueList"></div>
 
   <script>
-    // Firebase 初期化
+    function toggleDrawer() {
+      const drawer = document.getElementById('drawer');
+      drawer.classList.toggle('open');
+    }
+
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
       authDomain: "qr-visitor-log.firebaseapp.com",
@@ -155,7 +176,6 @@
     function renderQueue() {
       db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
         const allDocs = snapshot.docs;
-
         const visibleDocs = allDocs.filter(doc => {
           const status = doc.data().status;
           return status === "waiting" || status === "entered";
@@ -221,12 +241,6 @@
       });
     }
 
-    // ドロワー開閉関数
-    function toggleDrawer() {
-      const drawer = document.getElementById("drawer");
-      drawer.classList.toggle("open");
-    }
-
     window.onload = () => {
       document.getElementById("mainTitle").style.display = "block";
       renderQueue();
@@ -234,3 +248,4 @@
   </script>
 </body>
 </html>
+
