--- a/practice.html
+++ b/practice.html
@@ -46,31 +46,35 @@
       text-decoration: underline;
     }
 
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
       width: 30px;
-      gap: 5px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
     }
 
-    .hamburger div {
+    .menu-button span {
+      display: block;
       height: 4px;
-      background-color: white;
-      border-radius: 2px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
     }
 
     .drawer {
       position: fixed;
       top: 0;
       left: -250px;
-      width: 220px;
+      width: 250px;
       height: 100%;
-      background-color: #2c3e50;
+      background-color: #34495e;
       color: white;
-      padding-top: 60px;
-      transition: left 0.3s;
+      transition: 0.3s;
       z-index: 1000;
+      padding-top: 60px;
     }
 
     .drawer.open {
@@ -79,41 +83,16 @@
 
     .drawer a {
       display: block;
-      padding: 12px 20px;
-      color: white;
+      padding: 15px 20px;
       text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
     }
 
     .drawer a:hover {
-      background-color: #34495e;
+      background-color: #2c3e50;
     }
-
-    .drawer-backdrop {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 999;
-    }
-
-    .drawer-backdrop.show {
-      display: block;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-      }
-
-      .hamburger {
-        display: flex;
-      }
-    }
-
-    
 
     main {
       max-width: 800px;
