--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@
       <h2>待機人数</h2>
       <p>現在の待機人数: <span id="waitingCount">読み込み中...</span></p>
     </section>
+
+    <h2>店内マップ</h2>
+<iframe src="map.html" width="850" height="650" style="border: 2px solid #444; border-radius: 8px;"></iframe>
+
   </main>
 
 </body>
