--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         if (data.type === "enter") entries++;
         if (data.type === "exit") exits++;
-        if (data.type === "wait") waiting++;
+        if (data.type === "waiting") waiting++;
 
         if (tableCounts[table]) {
           if (data.type === "enter") {
