--- a/practice.html
+++ b/practice.html
@@ -257,7 +257,7 @@
   </header>
 
   <main>
-    <section id="hero" class="area area--hero" style="background: #e0f7da; padding: 40px 20px; text-align: center; width: 300%;">
+    <section id="hero" class="area area--hero" style="background: #e0f7da; padding: 40px 20px; width: 300%;">
   <div class="txt-side" style="max-width: none; margin: 0 auto;">
     <h1 class="area-tit" style="font-size: 2.5em; font-weight: bold; color: #2c3e50; margin-bottom: 20px;">
       店内の混雑状況を<br>リアルタイムで見える化
