--- a/practice.html
+++ b/practice.html
@@ -269,7 +269,7 @@
   </header>
 
   <main>
-    <section id="hero" class="area area--hero" 
+<section id="hero" class="full-width-section">
          style="background: #e0f7da; padding: 60px 0; text-align: center; width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
   <div style="max-width: 1000px; margin: 0 auto;">
     <h1 style="font-size: 2.5em; font-weight: bold; color: #2c3e50; margin-bottom: 20px;">
