--- a/practice.html
+++ b/practice.html
@@ -21,6 +21,7 @@
       background-color: #2c3e50;
       color: white;
       position: relative;
+      margin-bottom: 0;
     }
 
     .header-bar {
@@ -270,7 +271,7 @@
 
   <main>
 <section id="hero" class="full-width-section">
-         style="background: #e0f7da; padding: 60px 0; text-align: center; width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
+           style="background: #e0f7da; padding: 60px 0; text-align: center; width: 100vw; position: relative; left: 50%; right: 50%; margin: 0 -50vw 0 -50vw;">
   <div style="max-width: 1000px; margin: 0 auto;">
     <h1 style="font-size: 2.5em; font-weight: bold; color: #2c3e50; margin-bottom: 20px;">
       店内の混雑状況を<br>リアルタイムで見える化
