--- a/practice.html
+++ b/practice.html
@@ -61,6 +61,8 @@
   background: #e0f7da;
   padding: 60px 0;
   text-align: center;
+   margin-top: 0;
+  padding-top: 0;
 }
 
     /* ハンバーガーメニュー */
