--- a/practice.html
+++ b/practice.html
@@ -59,10 +59,8 @@
   margin-left: -50vw;
   margin-right: -50vw;
   background: #e0f7da;
-  padding: 60px 0;
+  /*padding: 60px 0;*/
   text-align: center;
-   margin-top: 0;
-  padding-top: 0;
 }
 
     /* ハンバーガーメニュー */
