--- a/practice.html
+++ b/practice.html
@@ -22,6 +22,7 @@
       color: white;
       position: relative;
       margin-bottom: 0;
+      padding-bottom: 0; 
     }
 
     .header-bar {
@@ -59,8 +60,9 @@
   margin-left: -50vw;
   margin-right: -50vw;
   background: #e0f7da;
-  /*padding: 60px 0;*/
+  padding: 60px 0;
   text-align: center;
+  margin-top: 0 !important; 
 }
 
     /* ハンバーガーメニュー */
@@ -271,7 +273,7 @@
 
   <main>
 <section id="hero" class="full-width-section">
-  <div style="max-width: 1000px; margin: 0 auto;">
+  <div style="max-width: 1000px;">
     <h1 style="font-size: 2.5em; font-weight: bold; color: #2c3e50; margin-bottom: 20px;">
       店内の混雑状況を<br>リアルタイムで見える化
     </h1>
