--- a/practice.html
+++ b/practice.html
@@ -55,10 +55,6 @@
     .full-width-section {
   width: 100vw;
   position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
   background: #e0f7da;
   padding: 60px 0;
   text-align: center;
@@ -273,7 +269,7 @@
 
   <main>
 <section id="hero" class="full-width-section">
-  <div style="max-width: 1000px;">
+  <div style="max-width: 1000px;margin: 0 auto;">
     <h1 style="font-size: 2.5em; font-weight: bold; color: #2c3e50; margin-bottom: 20px;">
       店内の混雑状況を<br>リアルタイムで見える化
     </h1>
