--- a/practice.html
+++ b/practice.html
@@ -55,6 +55,11 @@
     .full-width-section {
   width: 100vw;
   position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+
   background: #e0f7da;
   padding: 60px 0;
   text-align: center;
