--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <div class="header-title">　　　　　店内管理システム</div>
       <div class="header-links">
         <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
+        <a href="start.html">ログアウト</a>
       </div>
     </div>
     <div class="drawer">
