--- a/index.html
+++ b/index.html
@@ -286,9 +286,6 @@
        alt="背景都市イラスト" 
        style="width: 100%; height: auto; object-fit: cover; display: block;">
 </section>
-
-
-
     
     <section>
       <h2>全体状況</h2>
@@ -296,6 +293,12 @@
       <p>累計入店数: <span id="entries">-</span></p>
       <p>累計退店数: <span id="exits">-</span></p>
     </section>
+
+    <section id="realtime">
+    <h2>現在の混雑状況</h2>
+    <p>利用中のテーブル数: <span id="occupied-count">--</span></p>
+    <p>空席のテーブル数: <span id="available-count">--</span></p>
+  </section>
 
     <section id="tables">
       <h2>テーブル別 使用状況（時刻）</h2>
